minor change to test caching

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 the latest technologies and practices in the web and mobile design/development world.</p>
 
               <p>Professionals and enthusiasts of all backgrounds are encouraged to attend, participate,
-                and most importantly&mdash;get engaged.</p>
+                and most importantly: get engaged.</p>
 
               <p>In supporting this mission BohConf is inexpensive and accessible to everyone.</p>
 
