--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <title>BohConf 2013 | Baltimore</title>
     <meta name="description" content="BohConf 2013 is hosted in Baltimore, Maryland. Learn best practices for developing and designing web and mobile applications using Ruby on Rails, iOS, Android, UX, UI, HTML, CSS, Javascript, and related technologies.">
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
   </head>
 
