New dates and venue

--- a/index.html
+++ b/index.html
@@ -68,23 +68,32 @@
             <article id="venue">
               <h2>Venue</h2>
 
-              <p>BohConf <strong>may</strong> take place in the Mt Vernon neighborhood of Baltimore at
-                1030 N Charles St, Baltimore, MD 21201.</p>
+              <p>
+                BohConf will take place at the University of Baltimore at
+                1420 N Charles St, Baltimore, MD 21201 
+                (exact address and room number pending).
+              </p>
 
               <p>There are hotels in the area but we encourage you to <a href="#">stay for free with
                 some locals</a>.</p>
 
               <p>Street parking is available in the neighborhood.  You can also take the Circulator
                 and other means of public transportation.</p>
+              
+              <p>
+                UB is conveniently located near Baltimore Penn Station,
+                so it would be easy to take the MARC or Amtrak for the
+                day.
+              </p>
             </article>
 
             <article id="schedule">
               <h2>Schedule</h2>
 
               <div class="alert alert-error">Dates <strong>not</strong> final!</div>
-              <p>Thursday 5/30/13 from 6pm - 9pm: Ignite BohConf &amp; opening party.</p>
-              <p>Friday 5/31/13 from 8:30am - 5pm: multi-track conference.</p>
-              <p>Friday 5/31/13 from 5pm - 7pm: happy hour &amp; closing party.</p>
+              <p>Thursday 7/18/13 from 5pm - 8pm: Ignite BohConf &amp; opening party.</p>
+              <p>Friday 7/19/13 from 8am - 5pm: multi-track conference.</p>
+              <p>Friday 7/19/13 from 5pm - 7pm: happy hour &amp; closing party.</p>
             </article>
 
             <article id="sponsors">
