began styling to match mew 2013 logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
-<html manifest="/application.appcache">
+<html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -43,7 +44,12 @@
     <div class="container">
       <div class="row-fluid">
         <div class="span8 offset2">
-          <img src="/img/logo.png" alt="BohConf">
+          <span class="logo">
+            <h1>BohConf 2013</h1>
+            <p>July 18 - 19</p>
+            <p>Baltimore, MD</p>
+            <img src="/img/logo.png" alt="BohConf">
+          </span>
           <div class="content">
 
             <div class="alert alert-error">
