updated background image; added additional information to top of page; added buy tickets buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
-                <li><a href="#register">Register</a></li>
+                <li class="register"><a href="#">Buy Tickets!</a></li>
               </ul>
             </div>
 
@@ -44,12 +44,18 @@
     <div class="container">
       <div class="row-fluid">
         <div class="span8 offset2">
-          <span class="logo">
-            <h1>BohConf 2013</h1>
-            <p>July 18 - 19</p>
-            <p>Baltimore, MD</p>
-            <img src="/img/logo.png" alt="BohConf">
-          </span>
+          <div class="header">
+            <span class="info">
+              <h1>BohConf 2013</h1>
+              <p>July 19</p>
+              <p>Baltimore, MD</p>
+              <p class="ignite">And join us for Ignite BohConf on July 18, 6pm!</p>
+              <a href="#">Buy Tickets!</a>
+            </span>
+            <span class="logo">
+              <img src="/img/logo.png" alt="BohConf">
+            </span>
+          </div>
           <div class="content">
 
             <div class="alert alert-error">
@@ -106,12 +112,6 @@
               <h2>Sponsors</h2>
 
               <p>Thank you for the generous support of all of our sponsors.</p>
-            </article>
-
-            <article id="register">
-              <h2>Register</h2>
-
-              <p>Link to tickets, price, etc.</p>
             </article>
 
             <footer>
