--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                 (exact address and room number pending).
               </p>
 
+              <img src="/img/map.png">
+
               <p>There are hotels in the area but we encourage you to <a href="#">stay for free with
                 some locals</a>.</p>
 
