added border to map

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                 (exact address and room number pending).
               </p>
 
-              <img src="/img/map.png">
+              <div class="map">
+                <span>
+                  <img src="/img/map.png" class="map">
+                </span>
+              </div>
 
               <p>There are hotels in the area but we encourage you to <a href="#">stay for free with
                 some locals</a>.</p>
