updated map; added favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     
     <title>BohConf 2013 | Baltimore</title>
     <meta name="description" content="BohConf 2013 is hosted in Baltimore, Maryland. Learn best practices for developing and designing web and mobile applications using Ruby on Rails, iOS, Android, UX, UI, HTML, CSS, Javascript, and related technologies.">
