Updated copy; linked to eventbrite; added styles for tables

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
-                <li class="register"><a href="#">Buy Tickets!</a></li>
+                <li class="register"><a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a></li>
               </ul>
             </div>
-
 
           </div>
         </div>
@@ -51,7 +50,7 @@
               <p>July 19</p>
               <p>Baltimore, MD</p>
               <p class="ignite">And join us for Ignite BohConf on July 18, 6pm!</p>
-              <a href="#">Buy Tickets!</a>
+              <a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a>
             </span>
             <span class="logo">
               <img src="/img/logo.png" alt="BohConf">
@@ -59,16 +58,11 @@
           </div>
           <div class="content">
 
-            <div class="alert alert-error">
-              This page is under active development. Prices, dates, times, and schedule are subject to change.
-            </div>
-
-
             <article id="about">
               <h2>About</h2>
 
               <p>BohConf is a 1-day, multi-track, unconf-inspired conference dedicated to learning about
-                the latest technologies and practices in the web and mobile design/development world.</p>
+                the latest technologies and practices in the web and mobile design/development worlds.</p>
 
               <p>Professionals and enthusiasts of all backgrounds are encouraged to attend, participate,
                 and most importantly: get engaged.</p>
@@ -82,9 +76,8 @@
               <h2>Venue</h2>
 
               <p>
-                BohConf will take place at the University of Baltimore at
-                1420 N Charles St, Baltimore, MD 21201 
-                (exact address and room number pending).
+                BohConf will take place at University of Baltimore's Thumel Business Center at
+                <a href="http://goo.gl/maps/G9I93">11 W Mt Royal Ave, Baltimore, MD 21201.</a>
               </p>
 
               <div class="map">
@@ -93,26 +86,63 @@
                 </span>
               </div>
 
-              <p>There are hotels in the area but we encourage you to <a href="#">stay for free with
-                some locals</a>.</p>
-
-              <p>Street parking is available in the neighborhood.  You can also take the Circulator
-                and other means of public transportation.</p>
-              
               <p>
-                UB is conveniently located near Baltimore Penn Station,
-                so it would be easy to take the MARC or Amtrak for the
-                day.
+                There are hotels in the area but we encourage you to stay for free with
+                some locals. Tweet <a href="https://twitter.com/bohconf">@bohconf</a> and we'll
+                help you out.
+              </p>
+
+              <p>
+                UB is conveniently located near Baltimore Penn Station, so it would be easy to take
+                the MARC or Amtrak for the day.  Read
+                <a href="http://www.artscape.org/plan-your-visit/Getting-to-Artscape">more
+                  information on getting to BohConf / Artscape</a>.
               </p>
             </article>
 
             <article id="schedule">
               <h2>Schedule</h2>
 
-              <div class="alert alert-error">Dates <strong>not</strong> final!</div>
-              <p>Thursday 7/18/13 from 5pm - 8pm: Ignite BohConf &amp; opening party.</p>
-              <p>Friday 7/19/13 from 8am - 5pm: multi-track conference.</p>
-              <p>Friday 7/19/13 from 5pm - 7pm: happy hour &amp; closing party.</p>
+              <p>Thursday 7/18/13 from 5pm - 8pm: Ignite / Opening Party</p>
+              <p>Friday 7/19/13 from 8am - 5pm: BohConf</p>
+
+              <p>The tentative BohConf schedule is as follows:</p>
+              
+              <table>
+                <tr>
+                  <th>Room</th>
+                  <th>Capacity</th>
+                  <th>First half of day</th>
+                  <th>Second half of day</th>
+                </tr>
+                <tr>
+                  <td>Auditorium</td>
+                  <td>160</td>
+                  <td colspan="2">20-Minute Lectures</td>
+                </tr>
+                <tr>
+                  <td>135</td>
+                  <td>40-50</td>
+                  <td>Guided Exploration</td>
+                  <td>Barcamp</td>
+                </tr>
+                <tr>
+                  <td>143</td>
+                  <td>40-50</td>
+                  <td>Guided Exploration</td>
+                  <td>Barcamp</td>
+                </tr>
+                <tr>
+                  <td>Auditorium</td>
+                  <td>100</td>
+                  <td colspan="2">Hacking / Office Hours</td>
+                </tr>
+              </table>
+
+              <p>
+                A formal call for proposals will be issued shortly. This website will be updated
+                as more information is available.
+              </p>
             </article>
 
             <article id="sponsors">
@@ -122,8 +152,9 @@
             </article>
 
             <footer>
-              All content released under some Creative Commons or whatever license.  View
-              <a href="#">BohConf themes from previous years</a>.
+              <a href="https://twitter.com/bohconf">Follow @bohconf</a> |
+              <a href="http://fb.me/bohconf">Befriend BohConf</a> |
+              <a href="#">View BohConf themes from previous years</a>
             </footer>
           </div>
         </div>
