Added blurb about Artscape; changed title; corrected ignite time

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     
-    <title>BohConf 2013 | Baltimore</title>
+    <title>BohConf 2013</title>
     <meta name="description" content="BohConf 2013 is hosted in Baltimore, Maryland. Learn best practices for developing and designing web and mobile applications using Ruby on Rails, iOS, Android, UX, UI, HTML, CSS, Javascript, and related technologies.">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
@@ -49,7 +49,7 @@
               <h1>BohConf 2013</h1>
               <p>July 19</p>
               <p>Baltimore, MD</p>
-              <p class="ignite">And join us for Ignite BohConf on July 18, 6pm!</p>
+              <p class="ignite">And join us for Ignite BohConf on July 18, 5pm!</p>
               <a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a>
             </span>
             <span class="logo">
@@ -90,6 +90,12 @@
                 There are hotels in the area but we encourage you to stay for free with
                 some locals. Tweet <a href="https://twitter.com/bohconf">@bohconf</a> and we'll
                 help you out.
+              </p>
+
+              <p>
+                BohConf will take place on the Friday of <a href="http://www.artscape.org/">Artscape</a>.
+                Plan accordingly, especially if you were considering driving. We encourage you to checkout
+                Artscape after BohConf wraps up on Friday!
               </p>
 
               <p>
