Added blurb on hosts, added UB large logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#sponsors">Sponsors</a></li>
+                <li><a href="#hosts">Hosts &amp; Sponsors</a></li>
                 <li class="register"><a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a></li>
               </ul>
             </div>
@@ -151,10 +151,24 @@
               </p>
             </article>
 
+            <article id="hosts">
+              <h2>Hosts</h2>
+
+              <p>
+                <a href="http://www.smartlogicsolutions.com/">SmartLogic</a> is a
+                web and mobile application development firm based in Baltimore.
+              </p>
+              <p>
+              <p>
+                <a href="http://www.ubalt.edu/">University of Baltimore</a> is the public undergraduate,
+                graduate and professional University located in the heart of Baltimore.
+              </p> 
+            </article>
+
             <article id="sponsors">
               <h2>Sponsors</h2>
 
-              <p>Thank you for the generous support of all of our sponsors.</p>
+              <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
             <footer>
