--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
 
             <article id="hosts">
               <h2>Hosts</h2>
-
+              <div class="hosts-logos">
+                <a href="http://www.smartlogicsolutions.com/"><img src="../img/smartlogic.png" class="smartlogic"></a>
+                <a href="http://www.ubalt.edu/"><img src="../img/ub-logo-big.png" class="ub"></a>
+              </div>
               <p>
                 <a href="http://www.smartlogicsolutions.com/">SmartLogic</a> is a
                 web and mobile application development firm based in Baltimore.
               </p>
-              <p>
               <p>
                 <a href="http://www.ubalt.edu/">University of Baltimore</a> is the public undergraduate,
                 graduate and professional University located in the heart of Baltimore.
