added Back Forty and Woofound logos to Sponsors section

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
 
             <article id="sponsors">
               <h2>Sponsors</h2>
-
+              <a href="http://www.inthebackforty.com"><img src="../img/back-forty.png"></a>
+              <a href="http://www.woofound.com"><img src="../img/woofound.png"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
