--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
             </article>
 
             <footer>
-              <a href="https://twitter.com/bohconf">Follow @bohconf</a> |
+              <a href="https://twitter.com/bohconf">Follow @bohconf</a> for the latest news, and use
+              <a href="https://twitter.com/search?q=%23bohconf&src=typd">#bohconf</a> to tweet about the event |
               <a href="http://fb.me/bohconf">Befriend BohConf</a> |
               <a href="#">View BohConf themes from previous years</a>
             </footer>
