--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
               <h2>Sponsors</h2>
               <a href="http://www.inthebackforty.com"><img src="../img/back-forty.png"></a>
               <a href="http://www.woofound.com"><img src="../img/woofound.png"></a>
+              <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
