added alt text to sponsor logo images

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 
             <article id="sponsors">
               <h2>Sponsors</h2>
-              <a href="http://www.inthebackforty.com"><img src="../img/back-forty.png"></a>
-              <a href="http://www.woofound.com"><img src="../img/woofound.png"></a>
-              <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg"></a>
+              <a href="http://www.inthebackforty.com"><img src="../img/back-forty.png" alt="Back Forty"></a>
+              <a href="http://www.woofound.com"><img src="../img/woofound.png" alt="Woofound"></a>
+              <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg" alt="EventRebels"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
