Added 'previous years' page. Needs images and perhaps some refinement to copy.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <a href="https://twitter.com/bohconf">Follow @bohconf</a> for the latest news, and use
               <a href="https://twitter.com/search?q=%23bohconf&src=typd">#bohconf</a> to tweet about the event |
               <a href="http://fb.me/bohconf">Befriend BohConf</a> |
-              <a href="#">View BohConf themes from previous years</a>
+              <a href="previous-years.html">View BohConf themes from previous years</a>
             </footer>
           </div>
         </div>
