added images of shirts and postes to previous-years page

--- a/previous-years.html
+++ b/previous-years.html
@@ -46,19 +46,23 @@
         <div class="span8 offset2">
           <div class="content">
 
-            <article id="2010">
+            <article id="bohconf-2010">
               <h2>BohConf 2010&mdash;Boh Monroe</h2>
               <p>BohConf started in 2010 as the "Conf of Pleasant Coding."  <a href="http://www.railsconf.com/">RailsConf</a>
               came to Baltimore and <a href="http://www.smartlogicsolutions.com/">SmartLogic</a>
               organized the official&mdash;and free&mdash;unconference. By all accounts BohConf
               was a success, with one attendee going so far as to call BohConf "The Best Ruby Conference Ever."</p>
+              <div>
+                <img src="img/poster-2010.png">
+                <img src="img/shirt-2010.png">
+              </div>
               <p>BohConf 2010 included community code drives with well-known open source authors, a programming competition,
               a code retreat, and barcamp-style discussions.</p>
               <p>The <a href="http://bmoreonrails.org/">local Rails community (B'more on Rails)</a> was a gracious host indeed,
               offering out-of-towners places to stay and free rides to and from BWI.</p>
             </article>
 
-            <article id="2011">
+            <article id="bohconf-2011">
               <h2>BohConf 2011&mdash;Boh Fiction</h2>
               <p>Baltimore was such a gracious host to RailsConf and BohConf that the organizers of RailsConf made the obvious decision
               of bringing RailsConf back to Baltimore for another year.</p>
@@ -67,20 +71,28 @@
               friends at <a href="http://nationalbohemian.com/">Natty Boh</a>, including several cases of Boh cans, a Boh cornhole set,
               and last but certainly not least a case of Boh 40's aka the <a href="http://twitpic.com/4yzwto">best
                 conference schwag ever</a>.</p>
+              <div>
+                <img src="img/shirt-purple-2011.png">
+                <img src="img/shirt-green-2011.png">
+              </div>
               <p>BohConf 2011 included many of the same things as BohConf 2010 including community code drives and barcamp.  BohConf 2011
               also included an overwhelmingly successful <a href="http://kidsruby.com/">KidsRuby</a> session that was attended by more
               than 60 local middle and high school students.  BohConf 2011 also included an open government hackathon, JRuby code drive,
               and a number of guided exploration sessions.</p>
             </article>
 
-            <article id="2012">
+            <article id="bohconf-2012">
               <h2>BohConf 2012&mdash;CowBoh</h2>
               <p>RailsConf moved to Austin, TX in 2012, and BohConf went with it.  The local Austin Rails community
               stepped up and organized BohConf.  We at <a href="http://www.smartlogicsolutions.com">SmartLogic</a>
               still designed and printed some cool BohConf t-shirts.</p>
+              <div>
+                <img src="img/shirt-green-2012.png">
+                <img src="img/shirt-red-2012.png">
+              </div>
             </article>
 
-            <article id="2013">
+            <article id="bohconf-2013">
               <h2>BohConf 2013</h2>
               <p>RailsConf moved to Portland, OR in 2013, but there was no unconf.  We decided that Baltimore needed
               its own conference focused on the latest practices and technologies in the web and mobile development worlds
