--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#cfp">CFP</a></li>
                 <li><a href="#hosts">Hosts &amp; Sponsors</a></li>
                 <li class="register"><a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a></li>
               </ul>
@@ -50,9 +49,8 @@
               <h1>BohConf 2013</h1>
               <p>July 19</p>
               <p>Baltimore, MD</p>
-              <p class="ignite">And join us for Ignite BohConf on July 18, 5pm!</p>
               <a href="http://bohconf2013.eventbrite.com/">Buy Tickets!</a>
-              <a href="https://docs.google.com/forms/d/1dp8eFp8mT0t77jJ4VHtgFyT-hAH_F7jWLGlvmpubhcs/viewform" id="cfp-callout-link"><strong>The CFP is open!</strong>Submit a talk today!!</a>
+              <p class="ignite">And join us for Ignite BohConf on July 18, 5pm!</p>
             </span>
             <span class="logo">
               <img src="/img/logo.png" alt="BohConf">
@@ -141,39 +139,11 @@
                   <td>Barcamp</td>
                 </tr>
                 <tr>
-                  <td>Auditorium</td>
+                  <td>Atrium</td>
                   <td>100</td>
                   <td colspan="2">Hacking / Office Hours</td>
                 </tr>
               </table>
-            </article>
-
-            <article id="cfp">
-              <h2>Call for Proposals (CFP)</h2>
-
-              <p>
-                BohConf is looking for speakers to talk about the latest technologies and practices
-                in the web and mobile design/development worlds.  We especially encourage first-time
-                speakers to submit speaking proposals, but also welcome veteran speakers that will
-                be submitting new talks that have not been delivered elsewhere.
-              </p>
-              <p>
-                The <strong>20-minute lectures</strong> will be held in the auditorium.  We
-                recommend a 15-minute lecture followed by 5 minutes of Q&amp;A.
-              </p>
-              <p>
-                The <strong>guided exploration</strong> sessions will be held in the smaller
-                classrooms (up to 50 attendees) and are intended to be longer-form—perhaps an
-                hour in length.
-              </p>
-              <p>
-                Speakers get a free ticket to BohConf.  The CFP closes on 7/1/13.
-                We'll announce the final speaker lineup by 7/8/13.  If you purchase
-                a ticket before 7/8/13 and are selected as a speaker we will refund
-                the purchase of your ticket to BohConf.
-              </p>
-              <p><a href="https://docs.google.com/forms/d/1dp8eFp8mT0t77jJ4VHtgFyT-hAH_F7jWLGlvmpubhcs/viewform">Submit
-                your speaking proposal today!</a></p>
             </article>
 
             <article id="hosts">
@@ -197,8 +167,8 @@
             </article>
 
             <footer>
-              <a href="https://twitter.com/bohconf">Follow @bohconf</a> for the latest news, and use
-              <a href="https://twitter.com/search?q=%23bohconf&src=typd">#bohconf</a> to tweet about the event |
+              <a href="https://twitter.com/bohconf">@bohconf</a> |
+              <a href="https://twitter.com/search?q=%23bohconf&src=typd">#bohconf</a> |
               <a href="http://fb.me/bohconf">Befriend BohConf</a> |
               <a href="previous-years.html">View BohConf themes from previous years</a>
             </footer>
