Add our early batch of speaker announcements. More to come this week! @ryan feel free to fix up the style if you like

--- a/index.html
+++ b/index.html
@@ -144,6 +144,27 @@
                   <td colspan="2">Hacking / Office Hours</td>
                 </tr>
               </table>
+
+              <h3>Speakers</h3>
+              <section>
+                <img src="/img/speakers/bsierakowski.png">
+                <strong>Brian Sierakowski</strong>
+                <span>From Slacker To Hacker: Practical tips to learning to code</span>
+              </section>
+              <section>
+                <img src="/img/speakers/una.png">
+                <strong>Una Kravets</strong>
+                <span>Designing for a Global Context</span>
+              </section>
+              <p>More speakers will be announced soon!</p>
+
+              <h3>Guided Explorations</h3>
+              <section>
+                <img src="/img/speakers/ngauthier.jpeg">
+                <strong>Nick Gauthier</strong>
+                <span>Let's Code Us Some Backbone.js</span>
+              </section>
+              <p>More guided explorations will be announced soon!</p>
             </article>
 
             <article id="hosts">
