--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
               <a href="http://www.inthebackforty.com"><img src="../img/back-forty.png" alt="Back Forty"></a>
               <a href="http://www.woofound.com"><img src="../img/woofound.png" alt="Woofound"></a>
               <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg" alt="EventRebels"></a>
+              <a href="http://www.omniti.com"><img src="../img/omniTI.png" alt="OmniTI"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
