--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
               <a href="http://www.woofound.com"><img src="../img/woofound.png" alt="Woofound"></a>
               <a href="http://www.eventrebels.com"><img src="../img/event-rebels.jpg" alt="EventRebels"></a>
               <a href="http://www.omniti.com"><img src="../img/omniTI.png" alt="OmniTI"></a>
+              <a href="http://www.appdevelopersalliance.org/"><img src="../img/apps-alliance.png" alt="Application Developers Alliance"></a>
               <p>Interested in sponsoring?  Contact <a href="mailto:yair@smartlogicsolutions.com">Yair</a>.</p>
             </article>
 
