Speakers for BohConf 2013

--- a/index.html
+++ b/index.html
@@ -147,24 +147,120 @@
 
               <h3>Speakers</h3>
               <section>
+                <img src="/img/speakers/andymangold.jpeg">
+                <strong>Andy Mangold</strong>
+                <span>You Are a Designer (Whether you know it or not)</span>
+              </section>
+              <section>
+                <img src="/img/speakers/ahacop.png">
+                <strong>Ara Hacopian</strong>
+                <span>An Introduction to Reactive Cocoa</span>
+              </section>
+              <section>
                 <img src="/img/speakers/bsierakowski.png">
                 <strong>Brian Sierakowski</strong>
                 <span>From Slacker To Hacker: Practical tips to learning to code</span>
+              </section>
+              <section>
+                <img src="/img/speakers/fontzter.jpg">
+                <strong>Dave Fontz</strong>
+                <span>.on(".theBubble") - Event Binding at a Higher Level</span>
+              </section>
+              <section>
+                <img src="/img/speakers/ericoestrich.png">
+                <strong>Eric Oestrich</strong>
+                <span>Testing Android</span>
+              </section>
+              <section>
+                <img src="/img/speakers/flipsasser.jpeg">
+                <strong>Flip Sasser</strong>
+                <span>Code Economics: investing in quality software and the irrational producer</span>
+              </section>
+              <section>
+                <img src="/img/speakers/oronhaus.jpg">
+                <strong>Gill Haus</strong>
+                <span>So, You Want to Join a Startup?</span>
+              </section>
+              <section>
+                <img src="/img/speakers/javierios.jpeg">
+                <strong>Javier Rios</strong>
+                <span>What you need to know about Responsive Web Design (RWD)</span>
+              </section>
+              <section>
+                <img src="/img/speakers/johnbintz.png">
+                <strong>John Bintz</strong>
+                <span>Total Beginner AngularJS: Blow Your Mind Edition</span>
+              </section>
+              <section>
+                <img src="/img/speakers/ignu.jpeg">
+                <strong>Len Smith</strong>
+                <span>Backbone's rarely enough: An introduction to Backbone Marionette</span>
+              </section>
+              <section>
+                <img src="/img/speakers/subelsky.png">
+                <strong>Mike Subelsky</strong>
+                <span>A web product playbook: technology and business strategies</span>
+              </section>
+              <section>
+                <img src="/img/speakers/ryandestefano.jpg">
+                <strong>Ryan DeStefano</strong>
+                <span>CSS Preprocessors to the Rescue!</span>
+              </section>
+              <section>
+                <img src="/img/speakers/kanye_boh.png">
+                <strong>Sam Goldman</strong>
+                <span>The Language of Abstraction</span>
               </section>
               <section>
                 <img src="/img/speakers/una.png">
                 <strong>Una Kravets</strong>
                 <span>Designing for a Global Context</span>
               </section>
-              <p>More speakers will be announced soon!</p>
+              <section>
+                <img src="/img/speakers/kanye_boh.png">
+                <strong>Will Carroll</strong>
+                <span>Creating Online Maps</span>
+              </section>
+              <section>
+                <img src="/img/speakers/sznichols.png">
+                <strong>Zach Nichols</strong>
+                <span>Windows 8 – why you should care</span>
+              </section>
+              <p>The detailed schedule will be published soon.</p>
 
               <h3>Guided Explorations</h3>
+              <section>
+                <img src="/img/speakers/cupakromer.jpeg">
+                <strong>Aaron Kromer</strong>
+                <span>Dream Code (Reverse Refactoring)</span>
+              </section>
+              <section>
+                <img src="/img/speakers/bryanl.jpeg">
+                <strong>Bryan Liles</strong>
+                <span>The next steps of Android development</span>
+              </section>
+              <section>
+                <img src="/img/speakers/danivovich.jpg">
+                <strong>Dan Ivovich</strong>
+                <span>Deploying Rails apps with Chef and Capistrano</span>
+              </section>
+              <section>
+                <img src="/img/speakers/gtrakgt.jpg">
+                <img src="/img/speakers/canweriotnow.png">
+                <strong>Gary Trakhman & Jason Lewis</strong>
+                <span>Clojure for Everyone</span>
+              </section>
               <section>
                 <img src="/img/speakers/ngauthier.jpeg">
                 <strong>Nick Gauthier</strong>
                 <span>Let's Code Us Some Backbone.js</span>
               </section>
-              <p>More guided explorations will be announced soon!</p>
+              <section>
+                <img src="/img/speakers/tvon.jpg">
+                <strong>Tom von Schwerdtner</strong>
+                <span>A Modern Objective-C Development Methodology</span>
+              </section>
+              <p>The detailed schedule will be published soon.</p>
             </article>
 
             <article id="hosts">
